uploading video completegit statusgit status
exit

--- a/views/mixins/videoBlock.pug
+++ b/views/mixins/videoBlock.pug
@@ -1,6 +1,6 @@
 mixin videoBlock(video = {})
     .videoBlock
         a(href= routes.videoDetail(video.id))
-            video.videoBlock__thumbnail(src="file:///Users/lks/Desktop/css_sticky.mov", controls=true, type="video/mov" )
+            video.videoBlock__thumbnail(src=video.videoFile, controls=true )
             h4.videoBlock__title=video.title
             h6.videoBlock__views=video.views
