--- a/views/home.pug
+++ b/views/home.pug
@@ -10,6 +10,6 @@ block content
                 title:video.title,
                 description: video.description,
                 views : video.views,
-                videoFile:video.videoFile
+                videoFile:video.fileUrl
             })
     
