--- a/views/search.pug
+++ b/views/search.pug
@@ -5,12 +5,16 @@ block content
     .search__header
         h3 Searching for : #{searchingBy}
     .search__videos
+        if videos.length === 0
+            h5 No Videos Found
         each video in videos
             +videoBlock({
+                id : video.id,
                 title:video.title,
                 description: video.description,
                 views : video.views,
                 videoFile:video.videoFile
+                
             })
 
         
