--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,1 +1,16 @@
 extends layouts/main
+
+block content
+    .video__player
+        video(src=`/${video.fileUrl}`, controls=true)
+    .video__info
+        a(href=routes.editVideo(video.id)) Edit video
+        h5.video__titles= video.title
+        span.video__views=video.views
+        p.video__description=video.description
+
+    .video__comments
+        if video.comments.length ===1 
+            span.video__comment-number 1 comment
+        else
+            span.video_comment-number=`${video.comments.length} commnets`    
