webpack and styling complete

--- a/views/home.pug
+++ b/views/home.pug
@@ -3,8 +3,80 @@ extends layouts/main
 include mixins/videoBlock
 
 block content
-    .videos
+    .home-videos
         each video in videos
+            +videoBlock({
+                id:video.id,
+                title:video.title,
+                description: video.description,
+                views : video.views,
+                videoFile:video.fileUrl
+            })
+
+            +videoBlock({
+                id:video.id,
+                title:video.title,
+                description: video.description,
+                views : video.views,
+                videoFile:video.fileUrl
+            })
+
+            +videoBlock({
+                id:video.id,
+                title:video.title,
+                description: video.description,
+                views : video.views,
+                videoFile:video.fileUrl
+            })
+
+            +videoBlock({
+                id:video.id,
+                title:video.title,
+                description: video.description,
+                views : video.views,
+                videoFile:video.fileUrl
+            })
+
+            +videoBlock({
+                id:video.id,
+                title:video.title,
+                description: video.description,
+                views : video.views,
+                videoFile:video.fileUrl
+            })
+
+            +videoBlock({
+                id:video.id,
+                title:video.title,
+                description: video.description,
+                views : video.views,
+                videoFile:video.fileUrl
+            })
+
+            +videoBlock({
+                id:video.id,
+                title:video.title,
+                description: video.description,
+                views : video.views,
+                videoFile:video.fileUrl
+            })
+
+            +videoBlock({
+                id:video.id,
+                title:video.title,
+                description: video.description,
+                views : video.views,
+                videoFile:video.fileUrl
+            })
+
+            +videoBlock({
+                id:video.id,
+                title:video.title,
+                description: video.description,
+                views : video.views,
+                videoFile:video.fileUrl
+            })
+
             +videoBlock({
                 id:video.id,
                 title:video.title,
