facebook authentication complete

--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -6,6 +6,8 @@
             | Continue with Github
 
     button.socital-login--facebook
-        span
-            i.fab.fa-facebook-square
-        | Continue with Facebook            
+        a(href=routes.facebook)
+            span
+                i.fab.fa-facebook-square
+            | Continue with Facebook            
+            
